# uc-intg-horizon

./: .gitignore  Dockerfile  README.md  driver.json  get_horizon_token.html  pyproject.toml  requirements.txt
.github/workflows/: build.yml
git-hooks/: pre-push
uc_intg_horizon/: __init__.py  __main__.py  browser.py  client.py  config.py  const.py  device.py  driver.py  media_player.py  remote.py  select.py  sensor.py  setup_flow.py  setup_manager.py
