[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uc-intg-horizon"
dynamic = ["version"]
description = "Unfolded Circle Integration for LG Horizon Set-Top Boxes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MPL-2.0" }
authors = [
    { name = "Meir Miyara", email = "meir.miyara@gmail.com" }
]
keywords = ["unfoldedcircle", "integration", "horizon", "ziggo", "virgin", "telenet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL-2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]

dependencies = [
    "ucapi-framework>=1.8.3",
    "ucapi>=0.5.2",
    "lghorizon>=0.9.11",
    "aiohttp>=3.9.0",
    "certifi",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "pylint>=2.17.5",
]

simulator = [
    "asyncio>=3.4.3",
]

[project.urls]
Homepage = "https://github.com/mase1981/uc-intg-horizon"
Documentation = "https://github.com/mase1981/uc-intg-horizon/blob/main/README.md"
Repository = "https://github.com/mase1981/uc-intg-horizon"
Issues = "https://github.com/mase1981/uc-intg-horizon/issues"

[tool.setuptools]
packages = ["uc_intg_horizon"]

[tool.setuptools.dynamic]
version = {attr = "uc_intg_horizon.__version__"}

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103",  # invalid-name
    "C0114",  # missing-module-docstring
    "R0913",  # too-many-arguments
]
