[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uc-intg-horizon"
dynamic = ["version"]
description = "Unfolded Circle Integration for LG Horizon Set-Top Boxes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MPL-2.0" }
authors = [
    { name = "Meir Miyara", email = "meir.miyara@gmail.com" }
]
keywords = ["unfoldedcircle", "integration", "horizon", "ziggo", "virgin", "telenet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL-2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]

dependencies = [
    "ucapi>=0.5.3",
    "ucapi-framework>=1.9.1",
    "lghorizon>=0.9.11",
    "aiohttp>=3.9.0",
    "certifi",
]

[project.urls]
Homepage = "https://github.com/mase1981/uc-intg-horizon"
Repository = "https://github.com/mase1981/uc-intg-horizon"
Issues = "https://github.com/mase1981/uc-intg-horizon/issues"

[tool.setuptools]
packages = ["uc_intg_horizon"]

[tool.setuptools.dynamic]
version = {attr = "uc_intg_horizon.__version__"}
